Grok changes
************

0.11 (unreleased)
=================

Feature changes
---------------

* Integrated skins and layers. grok.layer, grok.IGrokLayer, grok.Skin 

* Removed grok.define_permission in favor of the grok.Permission
  component base class

* Add the grok.Role component base class.

* The admin UI now displays and offers deletion of broken objects.

* Removed support for defining model schemas using an inner class with the
  special name 'fields'. This was abandoned in favor the usual Zope 3 way of
  defining schemas in interfaces and implementing them in our Grok models.

Bug fixes
---------

* The admin UI now shows interfaces in modules.

* `handle...` is not a special function name any more.

* Views no longer need a custom AbsoluteURL to determine their URL,
  since each instance now properly gets a __name__ attribute.

Restructuring
-------------

* All objects based on GrokPageTemplate is now grokked, instead of having
  separate grokkers for each type of template.

* The View is now completely template-language agnostic, which makes it 
  easy to hook in new page template languages.

* The <grok:grok /> ZCML directive now emits a configuration action
  instead of grokking right away at XML parsing time.  That way
  grokkers can depend on components that are set up using regular ZCML
  (e.g. checking for a permission that's defined in ZCML).

* Changed the way grok's functional tests are set up.  Instead of each
  test case doing its own test setup, it is now done once by the
  ftesting layer.  This avoids ordering problems when some ftests
  would influence the environment of other ftests that were run later
  in time.

0.10 (2007-08-21)
=================

Feature changes
---------------

* Integrated admin user interface.

* Configuration using Martian (http://pypi.python.org/pypi/martian).

* Flash message infrastructure included.

* Adjust dependencies for Grok so that grokproject should work on
  Windows.

Bug fixes
---------
 