@@ -7,6 +7,10 @@ Grok changes
 Feature changes
 ---------------
 
+* There is now a grok.direct() directive that can be used on GlobalUtilities to 
+  mark that the class provides the utility directly and need no instantiation.
+  (XXX no test written yet /regebro)
+  
 * Integrated skins and layers. grok.layer, grok.IGrokLayer, grok.Skin 
 
 * Removed grok.define_permission in favor of the grok.Permission
